# Sankore-3.1

./: .gitignore  .qmake.conf  CMakeLists.txt  Dockerfile  Dockerfile.ci  Dockerfile.qt6  README.md  Sankore_3.1.pro  david_situation.md  new_sankore.md
src/adaptors/: CMakeLists.txt  UBCFFSubsetAdaptor.cpp  UBExportAdaptor.cpp  UBExportAdaptor.h  UBExportCFF.cpp  UBExportDocument.cpp  UBExportDocumentSetAdaptor.cpp  UBExportFullPDF.cpp  UBExportPDF.cpp  UBExportWeb.cpp  UBImportAdaptor.cpp  UBImportAdaptor.h  UBImportCFF.cpp  UBImportCFF.h  UBImportDocument.cpp  UBImportDocument.h  UBImportDocumentSetAdaptor.cpp  UBImportDocumentSetAdaptor.h  UBImportImage.cpp  UBImportImage.h  UBImportPDF.cpp  UBImportPDF.h  UBImportVirtualPrinter.cpp  UBIniFileParser.cpp  UBIniFileParser.h  UBMetadataDcSubsetAdaptor.cpp  UBMetadataDcSubsetAdaptor.h  UBSvgSubsetAdaptor.cpp  UBSvgSubsetAdaptor.h  UBThumbnailAdaptor.cpp  UBWebPublisher.cpp  UBWebPublisher.h
src/api/: CMakeLists.txt  UBLibraryAPI.cpp  UBLibraryAPI.h  UBW3CWidgetAPI.cpp  UBWidgetMessageAPI.cpp  UBWidgetUniboardAPI.cpp
src/board/: CMakeLists.txt  UBBoardController.cpp  UBBoardController.h  UBBoardPaletteManager.cpp  UBBoardPaletteManager.h  UBBoardView.cpp  UBBoardView.h  UBDrawingController.cpp  UBFeaturesController.cpp  UBFeaturesController.h
src/core/: CMakeLists.txt  UB.h  UBApplication.cpp  UBApplication.h  UBApplicationController.cpp  UBApplicationController.h  UBDisplayManager.cpp  UBDisplayManager.h  UBDocumentManager.cpp  UBDownloadManager.cpp  UBDownloadThread.cpp  UBForeignObjectsHandler.cpp  UBIdleTimer.cpp  UBMimeData.cpp  UBMimeData.h  UBPersistenceManager.cpp  UBPersistenceManager.h  UBPreferencesController.cpp  UBPreferencesController.h  UBSceneCache.cpp  UBSetting.cpp  UBSetting.h  UBSettings.cpp  UBSettings.h  UBTypes.h  main.cpp
src/customWidgets/: CMakeLists.txt  UBActionableWidget.cpp  UBGraphicsItemAction.cpp  UBGraphicsItemAction.h  UBMediaWidget.cpp  UBMediaWidget.h
src/desktop/: CMakeLists.txt  UBCustomCaptureWindow.cpp  UBCustomCaptureWindow.h  UBDesktopAnnotationController.cpp  UBDesktopAnnotationController.h  UBDesktopPalette.cpp  UBDesktopPalette.h  UBDesktopPropertyPalette.cpp  UBDesktopPropertyPalette.h  UBWindowCapture.h  UBWindowCaptureDelegate_win.cpp  UBWindowCaptureDelegate_win.h  UBWindowCapture_linux.cpp  UBWindowCapture_win.cpp
src/document/: CMakeLists.txt  UBDocumentContainer.cpp  UBDocumentContainer.h  UBDocumentController.cpp  UBDocumentController.h  UBDocumentProxy.cpp  UBDocumentProxy.h
src/domain/: CMakeLists.txt  UBAbstractGraphicsItem.cpp  UBAbstractGraphicsPathItem.cpp  UBAbstractGraphicsProxyWidget.cpp  UBAbstractGraphicsProxyWidget.h  UBAbstractUndoCommand.cpp  UBAbstractUndoCommand.h  UBDiagonalHandle.cpp  UBDocumentUndoCommand.cpp  UBDocumentUndoCommand.h  UBDragableThumbnail.cpp  UBFreeHandle.cpp  UBGraphicsAudioItemDelegate.h  UBGraphicsDelegateFrame.cpp  UBGraphicsDelegateFrame.h  UBGraphicsGroupContainerItem.cpp  UBGraphicsGroupContainerItemDelegate.cpp  UBGraphicsItemDelegate.cpp  UBGraphicsItemDelegate.h  UBGraphicsItemGroupUndoCommand.cpp  UBGraphicsItemGroupUndoCommand.h  UBGraphicsItemTransformUndoCommand.cpp  UBGraphicsItemTransformUndoCommand.h  UBGraphicsItemUndoCommand.cpp  UBGraphicsItemUndoCommand.h  UBGraphicsMediaItem.cpp  UBGraphicsMediaItem.h  UBGraphicsMediaItemDelegate.cpp  UBGraphicsMediaItemDelegate.h  UBGraphicsPDFItem.cpp  UBGraphicsPDFItem.h  UBGraphicsPixmapItem.cpp  UBGraphicsPixmapItem.h  UBGraphicsPolygonItem.cpp  UBGraphicsPolygonItem.h  UBGraphicsProxyWidget.h  UBGraphicsScene.cpp  UBGraphicsScene.h  UBGraphicsStroke.cpp  UBGraphicsStroke.h  (+23 more)
src/frameworks/: CMakeLists.txt  Exception.h  MacUtils.h  Merger.h  QGraphicsWebView.cpp  QGraphicsWebView.h  QWebEnginePage  QWebEnginePage_stub.cpp  QWebEnginePage_stub.h  QWebEngineProfile  QWebEngineProfile_stub.cpp  QWebEngineProfile_stub.h  QWebEngineSettings  QWebEngineView  QWebEngineView_stub.cpp  QWebEngineView_stub.h  UBBase32.cpp  UBCoreGraphicsScene.cpp  UBCoreGraphicsScene.h  UBCryptoUtils.cpp  UBCryptoUtils.h  UBFileSystemUtils.cpp  UBGeometryUtils.cpp  UBGeometryUtils.h  UBPlatformUtils.cpp  UBPlatformUtils.h  UBPlatformUtils_linux.cpp  UBPlatformUtils_win.cpp  UBStringUtils.cpp  UBVersion.cpp  UBWidgetUtils.cpp  frameworks.pri  qtsingleapplication.cpp  qtsingleapplication.h  quazip.h  quazipfile.h  quazipfileinfo.h
src/gui/: CMakeLists.txt  UBActionPalette.cpp  UBActionPalette.h  UBBlackoutWidget.cpp  UBCachePropertiesWidget.cpp  UBCachePropertiesWidget.h  UBCellPropertiesPalette.cpp  UBCircleFrame.cpp  UBCircleFrame.h  UBColorPicker.cpp  UBColorPicker.h  UBCreateHyperLinkPalette.cpp  UBCreateTablePalette.cpp  UBDockDownloadWidget.cpp  UBDockPalette.cpp  UBDockPalette.h  UBDockPaletteWidget.cpp  UBDockResourcesWidget.cpp  UBDockTeacherGuideWidget.cpp  UBDocumentNavigator.cpp  UBDocumentThumbnailWidget.cpp  UBDocumentToolsPalette.cpp  UBDownloadWidget.cpp  UBDrawingArrowsPropertiesPalette.cpp  UBDrawingFillPropertiesPalette.cpp  UBDrawingPalette.cpp  UBDrawingPalette.h  UBDrawingPolygonPalette.cpp  UBDrawingStrokePropertiesPalette.cpp  UBFavoriteToolPalette.cpp  UBFavoriteToolPalette.h  UBFeaturesActionBar.cpp  UBFeaturesActionBar.h  UBFeaturesWidget.cpp  UBFeaturesWidget.h  UBFloatingPalette.cpp  UBIconButton.cpp  UBKeyboardPalette.cpp  UBKeyboardPalette.h  UBKeyboardPalette_linux.cpp  (+50 more)
src/network/: CMakeLists.txt  UBAutoSaver.cpp  UBAutoSaver.h  UBCookieJar.cpp  UBCookieJar.h  UBHttpFileDownloader.cpp  UBHttpGet.cpp  (+2 more)
tests/: CMakeLists.txt  main.cpp  run_tests.sh  tests.pro  tst_UBBase32.cpp  tst_UBBase32.h  tst_UBCryptoUtils.cpp  tst_UBCryptoUtils.h  tst_UBDocumentProxy.cpp  tst_UBDocumentProxy.h  tst_UBFileSystemUtils.cpp  tst_UBFileSystemUtils.h  tst_UBGeometryUtils.cpp  tst_UBGeometryUtils.h  tst_UBIniFileParser.cpp  tst_UBIniFileParser.h  tst_UBMetadataDcSubsetAdaptor.cpp  tst_UBMetadataDcSubsetAdaptor.h  tst_UBOEmbedParser.cpp  tst_UBOEmbedParser.h  tst_UBSettings.cpp  tst_UBSettings.h  tst_UBStringUtils.cpp  tst_UBStringUtils.h  tst_UBVersion.cpp  tst_UBVersion.h
(+200 files in other folders)
