add_library(sankore_adaptors STATIC
    UBExportAdaptor.cpp
    UBExportAdaptor.h
    UBCFFSubsetAdaptor.cpp
    UBCFFSubsetAdaptor.h
    UBExportCFF.cpp
    UBExportCFF.h
    UBExportDocument.cpp
    UBExportDocument.h
    UBExportDocumentSetAdaptor.cpp
    UBExportDocumentSetAdaptor.h
    UBExportFullPDF.cpp
    UBExportFullPDF.h
    UBExportPDF.cpp
    UBExportPDF.h
    UBExportWeb.cpp
    UBExportWeb.h
    UBImportAdaptor.cpp
    UBImportAdaptor.h
    UBImportCFF.cpp
    UBImportCFF.h
    UBImportDocument.cpp
    UBImportDocument.h
    UBImportDocumentSetAdaptor.cpp
    UBImportDocumentSetAdaptor.h
    UBImportImage.cpp
    UBImportImage.h
    UBImportPDF.cpp
    UBImportPDF.h
    UBIniFileParser.cpp
    UBIniFileParser.h
    UBMetadataDcSubsetAdaptor.cpp
    UBMetadataDcSubsetAdaptor.h
    UBSvgSubsetAdaptor.cpp
    UBSvgSubsetAdaptor.h
    UBThumbnailAdaptor.cpp
    UBThumbnailAdaptor.h
    UBWebPublisher.cpp
    UBWebPublisher.h
    publishing/UBDocumentPublisher.cpp
    publishing/UBDocumentPublisher.h
    publishing/UBSvgSubsetRasterizer.cpp
    publishing/UBSvgSubsetRasterizer.h
)

target_include_directories(sankore_adaptors PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(sankore_adaptors PUBLIC
    sankore_core
    sankore_domain
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Svg
    Qt6::Xml
    Qt6::Network
    QuaZip::QuaZip
)
