add_library(sankore_domain STATIC
    UBGraphicsScene.cpp
    UBGraphicsScene.h
    UBGraphicsItemUndoCommand.cpp
    UBGraphicsItemUndoCommand.h
    UBGraphicsTextItemUndoCommand.cpp
    UBGraphicsTextItemUndoCommand.h
    UBGraphicsItemTransformUndoCommand.cpp
    UBGraphicsItemTransformUndoCommand.h
    UBGraphicsPixmapItem.cpp
    UBGraphicsPixmapItem.h
    UBDocumentUndoCommand.cpp
    UBDocumentUndoCommand.h
    UBPageSizeUndoCommand.cpp
    UBPageSizeUndoCommand.h
    UBGraphicsSvgItem.cpp
    UBGraphicsSvgItem.h
    UBGraphicsPolygonItem.cpp
    UBGraphicsPolygonItem.h
    UBItem.cpp
    UBItem.h
    UBGraphicsWidgetItem.cpp
    UBGraphicsWidgetItem.h
    UBGraphicsPDFItem.cpp
    UBGraphicsPDFItem.h
    UBGraphicsTextItem.cpp
    UBGraphicsTextItem.h
    UBResizableGraphicsItem.cpp
    UBResizableGraphicsItem.h
    UBGraphicsStroke.cpp
    UBGraphicsStroke.h
    UBGraphicsMediaItem.cpp
    UBGraphicsMediaItem.h
    UBAbstractUndoCommand.cpp
    UBAbstractUndoCommand.h
    UBGraphicsGroupContainerItem.cpp
    UBGraphicsGroupContainerItem.h
    UBGraphicsGroupContainerItemDelegate.cpp
    UBGraphicsGroupContainerItemDelegate.h
    UBGraphicsStrokesGroup.cpp
    UBGraphicsStrokesGroup.h
    UBGraphicsItemGroupUndoCommand.cpp
    UBGraphicsItemGroupUndoCommand.h
    UBGraphicsItemDelegate.cpp
    UBGraphicsItemDelegate.h
    UBGraphicsTextItemDelegate.cpp
    UBGraphicsTextItemDelegate.h
    UBGraphicsDelegateFrame.cpp
    UBGraphicsDelegateFrame.h
    UBGraphicsWidgetItemDelegate.cpp
    UBGraphicsWidgetItemDelegate.h
    UBGraphicsMediaItemDelegate.cpp
    UBGraphicsMediaItemDelegate.h
    UBGraphicsEllipseItem.cpp
    UBGraphicsEllipseItem.h
    UBShapeFactory.cpp
    UBShapeFactory.h
    UBGraphicsRectItem.cpp
    UBGraphicsRectItem.h
    UBGraphicsLineItem.cpp
    UBGraphicsLineItem.h
    UBGraphicsFreehandItem.cpp
    UBGraphicsFreehandItem.h
    UBAbstractGraphicsPathItem.cpp
    UBAbstractGraphicsPathItem.h
    UBEditable.cpp
    UBEditable.h
    UBAbstractHandle.cpp
    UBAbstractHandle.h
    UBDiagonalHandle.cpp
    UBDiagonalHandle.h
    UBFreeHandle.cpp
    UBFreeHandle.h
    UBHorizontalHandle.cpp
    UBHorizontalHandle.h
    UBVerticalHandle.cpp
    UBVerticalHandle.h
    UB2HandlesEditable.cpp
    UB2HandlesEditable.h
    UB3HandlesEditable.cpp
    UB3HandlesEditable.h
    UBShapeEditable.cpp
    UBShapeEditable.h
    UBAbstractEditableGraphicsPathItem.cpp
    UBAbstractEditableGraphicsPathItem.h
    UBAbstractHandlesBuilder.cpp
    UBAbstractHandlesBuilder.h
    UB1HEditableGraphicsCircleItem.cpp
    UB1HEditableGraphicsCircleItem.h
    UB1HEditableGraphicsSquareItem.cpp
    UB1HEditableGraphicsSquareItem.h
    UBAbstractGraphicsItem.cpp
    UBAbstractGraphicsItem.h
    UBEditableGraphicsPolygonItem.cpp
    UBEditableGraphicsPolygonItem.h
    UB1HEditableGraphicsBasicShapeItem.cpp
    UB1HEditableGraphicsBasicShapeItem.h
    UBEditableGraphicsRegularShapeItem.cpp
    UBEditableGraphicsRegularShapeItem.h
    UBAlignObjectManager.cpp
    UBAlignObjectManager.h
    UBDragableThumbnail.cpp
    UBDragableThumbnail.h
    UBGraphicsVideoItem.cpp
    UBGraphicsProxyWidget.cpp
    UBGraphicsProxyWidget.h
    UBAbstractGraphicsProxyWidget.cpp
    UBAbstractGraphicsProxyWidget.h
)

target_include_directories(sankore_domain PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(sankore_domain PUBLIC
    sankore_core
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Svg
    Qt6::Multimedia
    Qt6::WebEngineWidgets
)
