add_library(sankore_gui STATIC
    UBAbstractSubPalette.cpp
    UBAbstractSubPalette.h
    UBAbstractTeacherGuide.cpp
    UBAbstractTeacherGuide.h
    UBActionPalette.cpp
    UBActionPalette.h
    UBAlignObjectPalette.cpp
    UBAlignObjectPalette.h
    UBBlackoutWidget.cpp
    UBBlackoutWidget.h
    UBCachePropertiesWidget.cpp
    UBCachePropertiesWidget.h
    UBCellPropertiesPalette.cpp
    UBCellPropertiesPalette.h
    UBCircleFrame.cpp
    UBCircleFrame.h
    UBColorPicker.cpp
    UBColorPicker.h
    UBCreateHyperLinkPalette.cpp
    UBCreateHyperLinkPalette.h
    UBCreateLinkPalette.cpp
    UBCreateLinkPalette.h
    UBCreateTablePalette.cpp
    UBCreateTablePalette.h
    UBDockDownloadWidget.cpp
    UBDockDownloadWidget.h
    UBDockPalette.cpp
    UBDockPalette.h
    UBDockPaletteWidget.cpp
    UBDockPaletteWidget.h
    UBDockResourcesWidget.cpp
    UBDockResourcesWidget.h
    UBDockTeacherGuideWidget.cpp
    UBDockTeacherGuideWidget.h
    UBDocumentNavigator.cpp
    UBDocumentNavigator.h
    UBDocumentThumbnailWidget.cpp
    UBDocumentThumbnailWidget.h
    UBDocumentToolsPalette.cpp
    UBDocumentToolsPalette.h
    UBDownloadWidget.cpp
    UBDownloadWidget.h
    UBDrawingArrowsPropertiesPalette.cpp
    UBDrawingArrowsPropertiesPalette.h
    UBDrawingFillPropertiesPalette.cpp
    UBDrawingFillPropertiesPalette.h
    UBDrawingPalette.cpp
    UBDrawingPalette.h
    UBDrawingPolygonPalette.cpp
    UBDrawingPolygonPalette.h
    UBDrawingStrokePropertiesPalette.cpp
    UBDrawingStrokePropertiesPalette.h
    UBFavoriteToolPalette.cpp
    UBFavoriteToolPalette.h
    UBFeaturesActionBar.cpp
    UBFeaturesActionBar.h
    UBFeaturesWidget.cpp
    UBFeaturesWidget.h
    UBFloatingPalette.cpp
    UBFloatingPalette.h
    UBIconButton.cpp
    UBIconButton.h
    UBKeyboardPalette.cpp
    UBKeyboardPalette.h
    UBLeftPalette.cpp
    UBLeftPalette.h
    UBMagnifer.cpp
    UBMagnifer.h
    UBMainWindow.cpp
    UBMainWindow.h
    UBMessagesDialog.cpp
    UBMessagesDialog.h
    UBMessageWindow.cpp
    UBMessageWindow.h
    UBMousePressFilter.cpp
    UBMousePressFilter.h
    UBNavigatorPalette.cpp
    UBNavigatorPalette.h
    UBPageNavigationWidget.cpp
    UBPageNavigationWidget.h
    UBPropertyPalette.cpp
    UBPropertyPalette.h
    UBRegularShapesPalette.cpp
    UBRegularShapesPalette.h
    UBResources.cpp
    UBResources.h
    UBRightPalette.cpp
    UBRightPalette.h
    UBRubberBand.cpp
    UBRubberBand.h
    UBScreenMirror.cpp
    UBScreenMirror.h
    UBShapesPalette.cpp
    UBShapesPalette.h
    UBSpinningWheel.cpp
    UBSpinningWheel.h
    UBStartupHintsPalette.cpp
    UBStartupHintsPalette.h
    UBStylusPalette.cpp
    UBStylusPalette.h
    UBTeacherGuideConstantes.h
    UBTeacherGuideResourceEditionWidget.cpp
    UBTeacherGuideResourceEditionWidget.h
    UBTeacherGuideResourcesPresentationWidget.cpp
    UBTeacherGuideResourcesPresentationWidget.h
    UBTeacherGuideWidget.cpp
    UBTeacherGuideWidget.h
    UBTeacherGuideWidgetsTools.cpp
    UBTeacherGuideWidgetsTools.h
    UBThumbnailView.cpp
    UBThumbnailView.h
    UBThumbnailWidget.cpp
    UBThumbnailWidget.h
    UBToolbarButtonGroup.cpp
    UBToolbarButtonGroup.h
    UBToolWidget.cpp
    UBToolWidget.h
    UBUpdateDlg.cpp
    UBUpdateDlg.h
    UBVideoPlayer.cpp
    UBVideoPlayer.h
    UBWebToolsPalette.cpp
    UBWebToolsPalette.h
    UBWidgetMirror.cpp
    UBWidgetMirror.h
    UBZoomPalette.cpp
    UBZoomPalette.h
)

if(WIN32)
    target_sources(sankore_gui PRIVATE UBKeyboardPalette_win.cpp)
endif()

if(APPLE)
    target_sources(sankore_gui PRIVATE UBKeyboardPalette_mac.cpp)
endif()

if(UNIX AND NOT APPLE)
    target_sources(sankore_gui PRIVATE UBKeyboardPalette_linux.cpp)
endif()

target_include_directories(sankore_gui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(sankore_gui PUBLIC
    sankore_core
    sankore_domain
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Multimedia
)
