add_library(sankore_web STATIC
    UBWebController.cpp
    UBWebController.h
    UBWebPage.cpp
    UBWebPage.h
    UBWebKitUtils.cpp
    UBWebKitUtils.h
    UBTrapFlashController.cpp
    UBTrapFlashController.h
    UBOEmbedParser.cpp
    UBOEmbedParser.h
    UBWebPluginWidget.cpp
    UBWebPluginWidget.h
    browser/WBBrowserWindow.cpp
    browser/WBBrowserWindow.h
    browser/WBChaseWidget.cpp
    browser/WBChaseWidget.h
    browser/WBDownloadManager.cpp
    browser/WBDownloadManager.h
    browser/WBEditTableView.cpp
    browser/WBEditTableView.h
    browser/WBHistory.cpp
    browser/WBHistory.h
    browser/WBModelMenu.cpp
    browser/WBModelMenu.h
    browser/WBSearchLineEdit.cpp
    browser/WBSearchLineEdit.h
    browser/WBSqueezeLabel.cpp
    browser/WBSqueezeLabel.h
    browser/WBTabWidget.cpp
    browser/WBTabWidget.h
    browser/WBToolBarSearch.cpp
    browser/WBToolBarSearch.h
    browser/WBTrapWebPageContent.cpp
    browser/WBTrapWebPageContent.h
    browser/WBUrlLineEdit.cpp
    browser/WBUrlLineEdit.h
    browser/WBWebTrapWebView.cpp
    browser/WBWebTrapWebView.h
    browser/WBWebView.cpp
    browser/WBWebView.h
)

target_include_directories(sankore_web PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(sankore_web PUBLIC
    sankore_core
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Network
    Qt6::WebEngineWidgets
)
